--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
   "dependencies": {
     "restify": "^8.5.1"
   },
+  "scripts": {
+    "start": "node index.js"
+  },
+  "engines:": {
+    "node": "10.x"
+  },
   "devDependencies": {
     "@types/restify": "^8.4.2"
   }
